# xlog

./: .gitignore  CMakeLists.txt  README.md  compress.sh
cmake/: compress.cmake  example.cmake  flags.cmake  sanitizer.cmake  test.cmake
docs/: design.md  optimization.md
examples/: example_full.c  example_simple.c  example_usage.c
include/: xlog.h
src/: batch_writer.c  batch_writer.h  color.c  color.h  compress.c  compress.h  config.h  console_sink.c  console_sink.h  file_sink.c  file_sink.h  formatter.c  formatter.h  level.h  log_macros.h  log_record.c  log_record.h  miniz_impl.c  platform.c  platform.h  ringbuf.c  ringbuf.h  rotate.c  rotate.h  simd.c  simd.h  sink.c  sink.h  syslog_sink.c  syslog_sink.h  xlog.c  xlog_builder.c  xlog_builder.h  xlog_core.h  xlog_formatter.c  xlog_formatter.h
tests/: bench_xlog_perf.c  test_builder.c  test_color.c  test_compress.c  test_file_sink.c  test_formatter.c  test_legacy_macros.c  test_log_record.c  test_ringbuf.c  test_ringbuf_concurrency.c  test_rotate.c  test_simd.c  test_single_header.c  test_syslog_sink.c  test_xlog.c
